add ability to populate list, in addition to table; create json with all data that can be returned if needed

--- a/papers.html
+++ b/papers.html
@@ -13,6 +13,6 @@
 <body>
       <papers_header> </papers_header>
       <papers_list> </papers_list>
-      <script> populate_papers("1721168"); </script>     
+      <script> populate_papers("1721168", "list"); </script>     
 </body>
 </html>
