add author metadata in json; json format return added

--- a/papers.html
+++ b/papers.html
@@ -13,6 +13,6 @@
 <body>
       <papers_header> </papers_header>
       <papers_list> </papers_list>
-      <script> populate_papers("1721168", "list"); </script>     
+      <script> data = populate_papers("1721168", "json"); console.log(data); </script>     
 </body>
 </html>
