--- a/papers.html
+++ b/papers.html
@@ -11,8 +11,8 @@
 
 
 <body>
-      <papers_header> </papers_header>
       <papers_list> </papers_list>
-      <script> data = populate_papers("1721168", "json"); console.log(data); </script>     
+      <script> data = populate_papers("27604402", "list"); console.log(data); </script>
+      <!-- <script> data = populate_lab_papers(["27604402", "145743099"], "table"); console.log(data); </script> --> 
 </body>
 </html>
