--- a/papers.html
+++ b/papers.html
@@ -12,7 +12,7 @@
 
 <body>
       <papers_list> </papers_list>
-      <script> data = populate_papers("27604402", "table"); console.log(data); </script>
+      <script> data = populate_papers("27604402"); console.log(data); </script>
       <!-- <script> data = populate_lab_papers(["27604402", "145743099"], "table"); console.log(data); </script> --> 
 </body>
 </html>
