--- a/papers.html
+++ b/papers.html
@@ -2,17 +2,22 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Sample paper import</title>
-    <link href="style.css" rel="stylesheet">
-    <!-- <link href="https://niket.tandon.info/assets/papers/style.css" rel="stylesheet"> -->
-    <!-- <script src="https://niket.tandon.info/assets/papers/get_papers.js" type="text/javascript"></script> -->
-    <script src="get_papers.js" type="text/javascript"></script>
   </head>
 
 
 <body>
-      <papers_list> </papers_list>
-      <script> data = populate_papers("27604402"); console.log(data); </script>
-      <!-- <script> data = populate_lab_papers(["27604402", "145743099"], "table"); console.log(data); </script> --> 
+
+
+      <div style="inline-size: 65%;">
+          <link href="https://niket.tandon.info/assets/papers/style.css" rel="stylesheet">
+          <script src="https://niket.tandon.info/assets/papers/get_papers.js" type="text/javascript"></script>
+          <papers_list> </papers_list> <!-- This will be auto populated -->
+          <script> data = populate_papers("27604402"); </script>
+          <!-- <script> data = populate_lab_papers(["27604402", "145743099"], "table"); console.log(data); </script> -->
+      </div>
+
+
 </body>
 </html>
