batch parse images and handle most errors

--- a/papers.html
+++ b/papers.html
@@ -11,10 +11,12 @@
 
 
       <div style="inline-size: 65%;">
-          <link href="https://niket.tandon.info/assets/papers/style.css" rel="stylesheet">
-          <script src="https://niket.tandon.info/assets/papers/get_papers.js" type="text/javascript"></script>
+          <link href="style.css" rel="stylesheet">
+          <script src="get_papers.js" type="text/javascript"></script>
           <papers_list> </papers_list> <!-- This will be auto populated -->
+          <!-- use below S2 id for batch thumbnail testing -->
           <script> data = populate_papers("27604402"); </script>
+          <!-- <script> data = populate_papers("27604402"); </script> -->
           <!-- <script> data = populate_lab_papers(["27604402", "145743099"], "table"); console.log(data); </script> -->
       </div>
 
