--- a/papers.html
+++ b/papers.html
@@ -15,9 +15,9 @@
           <script src="get_papers.js" type="text/javascript"></script>
           <papers_list> </papers_list> <!-- This will be auto populated -->
           <!-- use below S2 id for batch thumbnail testing -->
-          <script> data = populate_papers("27604402"); </script>
+          <script> data = populate_papers('https://ykl7.github.io/files/extra/S2_author_data.json', "27604402"); </script>
           <!-- <script> data = populate_papers("27604402"); </script> -->
-          <!-- <script> data = populate_lab_papers(["27604402", "145743099"], "table"); console.log(data); </script> -->
+          <!-- <script> data = populate_lab_papers(["27604402", "145743099"]); console.log(data); </script> -->
       </div>
 
 
