--- a/papers.html
+++ b/papers.html
@@ -4,15 +4,19 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Sample paper import</title>
+    <style type="text/css">
+        body{background:#f5f6f7;}
+    </style>
+    <link href="style.css" rel="stylesheet">
+    <script src="get_papers.js" type="text/javascript"></script>
   </head>
 
 
 <body>
 
 
-      <div style="inline-size: 65%;">
-          <link href="https://niket.tandon.info/assets/papers/style.css" rel="stylesheet">
-          <script src="https://niket.tandon.info/assets/papers/get_papers.js" type="text/javascript"></script>
+      <div style="width: 50%; margin:0 auto;">
+
           <papers_list> </papers_list> <!-- This will be auto populated -->
           <script> data = populate_papers("27604402"); </script>
           <!-- <script> data = populate_lab_papers(["27604402", "145743099"], "table"); console.log(data); </script> -->
