Added images and media queries

--- a/papers.html
+++ b/papers.html
@@ -15,7 +15,7 @@
 <body>
 
 
-      <div style="width: 50%; margin:0 auto;">
+      <div style="margin:0 auto; padding:24px;">
 
           <papers_list> </papers_list> <!-- This will be auto populated -->
           <script> data = populate_papers("27604402"); </script>
