Retrieve figures and add caching

--- a/papers.html
+++ b/papers.html
@@ -18,7 +18,7 @@
       <div style="margin:0 auto; padding:24px;">
 
           <papers_list> </papers_list> <!-- This will be auto populated -->
-          <script> data = populate_papers("27604402"); </script>
+          <script> data = populate_papers("27604402", 'https://ykl7.github.io/files/extra/S2_author_data.json'); </script>
           <!-- <script> data = populate_lab_papers(["27604402", "145743099"], "table"); console.log(data); </script> -->
       </div>
 
